--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -95,10 +95,6 @@ textarea {
 .sheet-text-align-center {
   text-align: center; }
 
-button.sheet-settings-button {
-  height: 5%;
-  margin-left: 1%; }
-
 input[name='attr_stats_toggle'],
 input[name='attr_stats_toggle'] + span {
   position: relative; }
@@ -344,9 +340,11 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     padding: 0px; }
   .sheet-pc div.sheet-core-info h2 {
     margin-right: 1%; }
+  .sheet-pc input.sheet-display-flag {
+    position: absolute; }
   .sheet-pc div.repitem input[type='number'] {
     text-align: center;
-    width: 3em; }
+    width: 2.5em; }
   .sheet-pc div.sheet-skill-box button[type='roll'] {
     font-size: 1em;
     text-align: left; }
@@ -356,21 +354,20 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     display: inline-block;
     font-size: 0.8em;
     text-transform: capitalize; }
-    .sheet-pc div.sheet-skill-box label[data-i18n-title='rating'] {
-      grid-area: 1 / 2 / 1 / 3; }
     .sheet-pc div.sheet-skill-box label[data-i18n-title='ratingmodifier'] {
-      grid-area: 1 / 3 / 1 / 6; }
+      grid-area: 2 / 3 / 2 / 6; }
     .sheet-pc div.sheet-skill-box label[data-i18n-title='specializations'] {
       grid-area: 3 / 1 / 3 / 6; }
-    .sheet-pc div.sheet-skill-box label[data-i18n-title='notes'],
-    .sheet-pc div.sheet-skill-box label textarea {
+    .sheet-pc div.sheet-skill-box label[data-i18n-title='notes'], .sheet-pc div.sheet-skill-box label textarea {
       grid-area: 4 / 1 / 4 / 6; }
     .sheet-pc div.sheet-skill-box label > input {
       text-align: left;
       border-radius: 0px;
       width: 100%; }
   .sheet-pc div.sheet-skill-box div.sheet-row-long {
+    display: inline-grid;
     grid-column-gap: 1%;
+    grid-row-gap: 2%;
     grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
     padding: 1%;
     width: 100%; }
@@ -642,6 +639,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   height: 22px;
   margin-bottom: 4px;
   vertical-align: top;
+  text-align: center;
   width: 65%; }
   .sheet-attr-und .sheet-display {
     text-align: center; }
@@ -817,6 +815,15 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-repeat-box h3 {
     color: #000;
     margin-bottom: -3px; }
+  .sheet-repeat-box button.sheet-pictos, .sheet-repeat-box .sheet-cc-row button[name*='shots'], .sheet-cc-row .sheet-repeat-box button[name*='shots'], .sheet-repeat-box .sheet-cc-row button[name='act_reload'], .sheet-cc-row .sheet-repeat-box button[name='act_reload'], .sheet-repeat-box .sheet-cc-row button[name='act_primary_ammo'], .sheet-cc-row .sheet-repeat-box button[name='act_primary_ammo'], .sheet-repeat-box .repcontrol button.repcontrol_edit:after, .repcontrol .sheet-repeat-box button.repcontrol_edit:after,
+  .sheet-repeat-box .repcontrol button.repcontrol_add:after,
+  .repcontrol .sheet-repeat-box button.repcontrol_add:after, .sheet-repeat-box .itemcontrol button.repcontrol_del, .itemcontrol .sheet-repeat-box button.repcontrol_del,
+  .sheet-repeat-box button.sheet-settings-button {
+    font-size: 1em;
+    position: absolute;
+    line-height: 1em; }
+  .sheet-repeat-box button.sheet-settings-button {
+    left: 96%; }
   .sheet-repeat-box .repitem {
     display: inline-flex;
     border-bottom: 1px solid #000;
@@ -879,7 +886,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   opacity: 0;
   position: absolute;
   top: 0px;
-  width: 95%;
+  width: 90%;
   height: 100%; }
 
 .sheet-arms input.sheet-display-flag,
@@ -990,7 +997,7 @@ option.sheet-option-groups {
   font-size: 1em;
   font-style: italic; }
 
-input.sheet-skill-select {
+input.sheet-skill-select[type='checkbox'] {
   opacity: 1;
   width: 3%; }
 
@@ -1006,8 +1013,7 @@ input.sheet-skill-select {
     width: 8%; }
     .sheet-arms .sheet-display .sheet-display-row:first-child {
       text-align: left;
-      width: 36%;
-      margin-right: 1%; }
+      width: 36%; }
     .sheet-arms .sheet-display .sheet-display-row:nth-of-type(2) {
       width: 12%; }
 .sheet-arms input[type='text'] {
@@ -1015,8 +1021,7 @@ input.sheet-skill-select {
   width: 8%; }
   .sheet-arms input[type='text']:first-child {
     text-align: left;
-    width: 36%;
-    margin-right: 1%; }
+    width: 36%; }
 .sheet-arms h3 {
   text-align: center;
   width: 8%; }
@@ -1079,8 +1084,6 @@ input.sheet-skill-select {
     margin-right: 5.5px; }
   .sheet-armor-box .sheet-settings input[name='attr_name'] {
     width: 40%; }
-  .sheet-armor-box .sheet-settings input[type='number'] {
-    margin-right: 0.75%; }
   .sheet-armor-box .sheet-display .sheet-display-row {
     margin-right: 3px; }
     .sheet-armor-box .sheet-display .sheet-display-row:nth-of-type(7) {
@@ -1100,15 +1103,9 @@ input.sheet-skill-select {
     width: 150px; }
 
 /***** QUALITIES SETTINGS *****/
-.sheet-quality button[type='roll'],
-.sheet-quality button[type='action'] {
-  font-size: 1em;
-  left: 92%;
-  position: absolute; }
-.sheet-quality button[type='action'] {
-  left: 98%; }
+.sheet-quality button[type='roll'] {
+  left: 90%; }
 .sheet-quality .sheet-settings input[type='text'] {
-  margin-right: 2%;
   width: 82%; }
 .sheet-quality .sheet-settings select {
   width: 8%; }
@@ -1177,11 +1174,11 @@ input.sheet-skill-select {
 
 /***** GEAR *****/
 .sheet-item-box h3:first-child {
-  margin-right: 83%; }
+  margin-right: 80%; }
 
 /***** GEAR SETTINGS *****/
 .sheet-item-box input[type='text'] {
-  width: 90%; }
+  width: 85%; }
 
 /***** GEAR DISPLAY *****/
 .sheet-item-box .sheet-display-row,
@@ -2175,7 +2172,7 @@ input.sheet-settings-toggle ~ .sheet-attr-lim div.sheet-settings,
 input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
 input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
-input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
+input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, input.sheet-settings-toggle[value='display'] ~ .sheet-settings, .sheet-hide-magic, .sheet-hide-resonance, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2), input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-grunt.sheet-hide-magic,
@@ -2208,7 +2205,7 @@ input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']
 .sheet-tab-switch[value='language'] ~ .sheet-skills-lang, .sheet-magic-toggle[value='spells'] ~ .sheet-magic-spells, .sheet-magic-toggle[value='preps'] ~ .sheet-magic-preps, .sheet-magic-toggle[value='rituals'] ~ .sheet-magic-rituals, .sheet-tab-switch[value='quality'] ~ .sheet-quality, .sheet-tab-switch[value='martial'] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
   display: inline; }
 
-.sheet-pc .sheet-tabs, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-npc div.sheet-tabs, .sheet-npc div.sheet-mid, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
+.sheet-pc .sheet-tabs, .sheet-npc div.sheet-tabs, .sheet-npc div.sheet-mid, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-attribute.sheet-vehicle {
   display: inline-grid; }
 
 .sheet-pictos, .sheet-settings-toggle input[type='checkbox'] + span, .sheet-flag-primary + div > span, .sheet-cc-row button[name*='shots'], .sheet-cc-row button[name='act_reload'], .sheet-cc-row button[name='act_primary_ammo'], .repcontrol .repcontrol_edit:after,
@@ -2218,7 +2215,7 @@ input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam']
 .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value='0']) + .sheet-optional, .sheet-npc div.sheet-mid div.sheet-column, input[name='attr_sheet_type']:not([value='pc']) ~ .sheet-npc,
 input[name='attr_sheet_type'][value='pc'] ~ .sheet-pc, .sheet-options_toggle[value='arms'] ~ .sheet-arms, .sheet-options_toggle[value='augs'] ~ .sheet-augs, .sheet-options_toggle[value='core'] ~ .sheet-core, .sheet-options_toggle[value='gear'] ~ .sheet-gear, .sheet-options_toggle[value='options'] ~ .sheet-options, .sheet-options_toggle[value='social'] ~ .sheet-social, .sheet-options_toggle[value='magic'] ~ .sheet-magic, .sheet-options_toggle[value='matrix'] ~ .sheet-matrix, .sheet-options_toggle[value='vehicle'] ~ .sheet-vehicle, input[name='attr_stats_toggle'][value='settings'] ~ .sheet-attribute .sheet-settings,
 input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-column .sheet-settings,
-input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-textrow .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
+input[name='attr_stats_toggle'][value='settings'] ~ .sheet-body .sheet-textrow .sheet-settings, input.sheet-settings-toggle[value='settings'] ~ .sheet-settings, .sheet-character-type[value='magic'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, input[name='attr_flag_special'][value='magic'] ~ .sheet-npc .sheet-hide-magic, .sheet-character-type[value='resonance'] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_flag_special'][value='resonance'] ~ .sheet-npc .sheet-hide-resonance, input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-rows.sheet-grunt,
 input[name='attr_sheet_type'][value='grunt'] ~ .sheet-npc .sheet-textrow.sheet-grunt, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-rows.sheet-host,
 input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-textrow.sheet-host, input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-rows.sheet-sprite,
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-textrow.sheet-sprite, input[name='attr_sheet_type'][value='vehicle'] ~ .sheet-npc .sheet-rows.sheet-vehicle,
@@ -2240,9 +2237,15 @@ input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-settings {
   text-align: left;
   width: 100%; }
 
+/* OLD WAY TO SHOW & HIDE THINGS */
 input.sheet-settings-toggle[value='display'] ~ div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-settings {
   display: inline-block; }
+
+/* NEW WAY TO HIDE THINGS */
+/* SHOW COLLAPSABLE DESCRIPTIONS AFTER CLICKING HIDDEN CHECKBOX */
+input.sheet-display-flag ~ div.sheet-collapsable {
+  height: auto; }
 
 /***** NPC TYPES *****/
 /* SHOW AND HIDE MAGIC AND RESONANCE SPECIFIC ATTRIBUTES BASED ON RADIO TOGGLE */
@@ -2287,16 +2290,17 @@ div.sheet-footer img {
   min-height: 27px; }
 
 .repcontrol .btn {
-  display: inline-block;
-  width: 25px;
   background: none;
   border: medium none;
   box-shadow: none;
   color: transparent !important;
+  display: inline-block;
+  font-size: 15px;
   margin-left: 10px;
   outline: 0;
   padding: 0px 0px 0px 0px;
-  text-shadow: none; }
+  text-shadow: none;
+  width: 25px; }
 
 .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after {
@@ -2320,7 +2324,6 @@ div.sheet-footer img {
 .repcontrol .repcontrol_edit:after,
 .repcontrol .repcontrol_add:after {
   color: #000;
-  left: -94%;
   position: relative; }
 
 .sheet-npc .repcontrol .repcontrol_edit:after,
