--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -73,13 +73,13 @@ include src/pug/_variables.pug
 									select.limit-select(name='attr_limit' title='Skill limit')
 										+limitSelect('Physical')
 							fieldset(class='repeating_' + key)
-								input.settings-toggle(name='attr_flag' type='hidden' value='settings' title='@{repeating_'+val[0]+'_${x}_flag')
 								input(name='attr_display_rating' type='hidden')
 								input(name='attr_display_specialization' type='hidden' value='')
 								input(name='attr_display_limit' type='hidden' value=val[2])
 								input(name='attr_display_attribute' type='hidden' value=val[1])
 								input(name='attr_dicepool' type='hidden' value='0')
 								.row-long
+									input.settings-toggle(name='attr_flag' type='hidden' value='settings' title='@{repeating_'+val[0]+'_${x}_flag')
 									.buttons
 										//- SKILL BUTTON
 										+skillButton(false)
@@ -91,22 +91,21 @@ include src/pug/_variables.pug
 									select.limit-select(name='attr_limit' value='physical_limit' title='@{repeating_'+val[0]+'_${x}_limit}')
 										+limitSelect(val[2])
 									button.pictos(name='act_skill' type='action') x
-								.settings-grid.row-long
 									if key === 'active'
-										select.skill-select(name='attr_skill' value='Close Combat Group' title='@{repeating_'+val[0]+'_${x}_skill}')
+										select.skill-select.settings(name='attr_skill' value='Close Combat Group' title='@{repeating_'+val[0]+'_${x}_skill}')
 											include src/pug/skillselect.html
 									else
-										label(data-i18n-title='skill' title='skill')
+										label.settings(data-i18n-title='skill' title='skill')
 											input(name='attr_skill' placeholder=key type='text' title='@{repeating_'+val[0]+'_${x}_skill}')
-									label(data-i18n-title='rating' title='rating')
+									label.settings(data-i18n-title='rating' title='rating')
 										input(name='attr_rating' min='0' placeholder='0' type='number' title='@{repeating_'+val[0]+'_${x}_rating}')
-									label(data-i18n-title='ratingmodifier' title='Rating Modifier')
+									label.settings(data-i18n-title='ratingmodifier' title='Rating Modifier')
 										span(data-i18n='ratingmodifier') Rating Modifier
 										input(name='attr_rating_modifier' placeholder='0' type='number' title='@{repeating_'+val[0]+'_${x}_rating_modifier}')
-									label(data-i18n-title='specializations' title='Specializations') 
+									label.settings(data-i18n-title='specializations' title='Specializations') 
 										span(data-i18n='specializations') Specializations
 										input(name='attr_specialization}' placeholder='Specalizations' type='text' title='@{repeating_'+val[0]+'_${x}_specialization}')
-									label(data-i18n-title='notes' title='notes')
+									label.settings(data-i18n-title='notes' title='notes')
 										span(data-i18n='notes') Notes
 										textarea(name='attr_notes' value='' placeholder='Notes' title='@{repeating_'+val[0]+'_${x}_notes}')
 
