--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -59,10 +59,23 @@
 		width     : 100%;
 	}
 
+	/* OLD WAY TO SHOW & HIDE THINGS */
 	input.sheet-settings-toggle[value='display'] ~ div.sheet-display,
     input.sheet-settings-toggle[value='settings'] ~ div.sheet-settings {
       display: inline-block;
     }
+
+    /* NEW WAY TO HIDE THINGS */
+    input.sheet-settings-toggle[value='display'] ~ .sheet-settings {
+    	@extend %display-none; 
+    }
+
+    input.sheet-settings-toggle[value='settings'] ~ .sheet-settings {
+    	@extend %display-inline-block; 
+    }
+
+    /* SHOW COLLAPSABLE DESCRIPTIONS AFTER CLICKING HIDDEN CHECKBOX */
+    input.sheet-display-flag ~ div.sheet-collapsable { height: auto; }
 
 	@each $specialAttribute in $specialCharacters {
 		//-PCs
