--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -229,13 +229,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			h2{ margin-right: 1%; }
 		}
 
+		input.sheet-display-flag { position: absolute; }
 
 		/***** REPEATING CONTAINERS *****/
 
 		div.repitem {
 			input[type='number'] {
 				text-align: center;
-				width: 3em;
+				width: 2.5em;
 			}
 		}
 
@@ -243,7 +244,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		div.sheet-skill-box {
 			button[type='roll'] {
 				font-size: 1em;
-				text-align: left; 
+				text-align: left;
 			}
 
 			h2:nth-of-type(1n+2) { text-align: center; }
@@ -253,14 +254,9 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				font-size     : 0.8em;
 				text-transform: capitalize;
 
-				&[data-i18n-title='rating'] { grid-area: 1 / 2 / 1 / 3; }
-				&[data-i18n-title='ratingmodifier'] { grid-area: 1 / 3 / 1 / 6; }
+				&[data-i18n-title='ratingmodifier'] { grid-area: 2 / 3 / 2 / 6; }
 				&[data-i18n-title='specializations'] { grid-area: 3 / 1 / 3 / 6; }
-
-				&[data-i18n-title='notes'],
-				textarea { 
-					grid-area: 4 / 1 / 4 / 6; 
-				}
+				&[data-i18n-title='notes'], textarea { grid-area: 4 / 1 / 4 / 6; }
 
 				& > input {
 					@extend %borderBottom;
@@ -273,15 +269,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 			input[name='attr_skill'] { @extend %borderBottom; }
 
 			div.sheet-row-long {
-				@extend %display-inline-grid;
+				display: inline-grid;
 				grid-column-gap: 1%;
+				grid-row-gap: 2%;
 				grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
 				padding: 1%;
 				width: 100%;
 
-				h3:nth-of-type(1n+2) {
-					text-align: center;;
-				}
+				h3:nth-of-type(1n+2) { text-align: center; }
 			}
 
 			select.sheet-attribute-select {
