--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -324,9 +324,10 @@
 		height        : 22px;
 		margin-bottom : 4px;
 		vertical-align: top;
+		text-align: center;
 		width         : 65%;
 
-		.sheet-display{ text-align: center; }
+		.sheet-display { text-align: center; }
 	}
 
 	.sheet-tiny-span {font-size: 0.75em;}
@@ -535,6 +536,15 @@
 		margin-bottom: -3px;
 	}
 
+	button.sheet-pictos,
+	button.sheet-settings-button {
+		font-size: 1em;
+		position: absolute;
+		line-height: 1em;
+	}
+
+	button.sheet-settings-button { left: 96%; }
+
 	/***** REPEATING SECTION *****/
 	.repitem {
 		display      : inline-flex;
@@ -640,7 +650,7 @@
 		opacity : 0;    
 		position: absolute;
 		top     : 0px;
-		width   : 95%;
+		width   : 90%;
 		height  : 100%;
 	}
 
@@ -739,7 +749,7 @@
 		font-style: italic;
 	}
 
-	input.sheet-skill-select {
+	input.sheet-skill-select[type='checkbox'] {
 		opacity: 1;
 		width: 3%;
 	}
@@ -762,7 +772,6 @@
 				&:first-child {
 					text-align  : left;
 					width       : 36%;
-					margin-right: 1%;
 				}
 
 				&:nth-of-type(2) {width: 12%;}
@@ -776,9 +785,8 @@
 			&:first-child {
 				text-align  : left;
 				width       : 36%;
-				margin-right: 1%;
 			}
-		} 
+		}
 
 		h3 {
 			text-align: center;
@@ -850,7 +858,6 @@
 		/***** ARMOR SETTINGS *****/
 		.sheet-settings {
 			input[name='attr_name'] {width: 40%;}
-			input[type='number'] { margin-right: 0.75%; }
 		}
 
 		/***** ARMOR DISPLAY *****/
@@ -884,20 +891,10 @@
 
 /***** QUALITIES SETTINGS *****/
 	.sheet-quality {
-		button[type='roll'],
-		button[type='action']  {
-			font-size: 1em;
-			left: 92%;
-			position: absolute;
-		}
-
-		button[type='action'] { left: 98%; }
+		button[type='roll']  { left: 90%; }
 
 		.sheet-settings {
-			input[type='text'] {
-				margin-right: 2%;
-				width       : 82%;
-			}
+			input[type='text'] { width: 82%; }
 
 			select  { width: 8%; }
 		}
@@ -979,11 +976,10 @@
 					width       : 53%;}
 
 	/***** GEAR *****/
-		.sheet-item-box h3:first-child{
-			margin-right: 83%;}
+		.sheet-item-box h3:first-child{ margin-right: 80%; }
 
 		/***** GEAR SETTINGS *****/
-			.sheet-item-box input[type='text'] {width: 90%;}
+			.sheet-item-box input[type='text'] {width: 85%;}
 
 		/***** GEAR DISPLAY *****/
 			.sheet-item-box .sheet-display-row,
