--- a/Shadowrun5thEdition/src/scss/_repeatingsection.scss
+++ b/Shadowrun5thEdition/src/scss/_repeatingsection.scss
@@ -7,16 +7,18 @@
 		min-height    : 27px;}
 
 	.repcontrol .btn {
-		display    : inline-block;
-		width      : 25px;
 		background : none;
 		border     : medium none;
 		box-shadow : none;
 		color      : transparent !important;
+		display    : inline-block;
+		font-size: 15px;
 		margin-left: 10px;
 		outline    : 0;
 		padding    : 0px 0px 0px 0px;
-		text-shadow: none;}
+		text-shadow: none;
+		width      : 25px;
+	}
 
 	 .repcontrol .repcontrol_edit:after,
 	 .repcontrol .repcontrol_add:after  {
@@ -27,7 +29,8 @@
 		height: 12px;
 		padding: 2px 4px 2px 4px;
 		visibility: visible;
-		width: 12px;}
+		width: 12px;
+	}
 
 	.repcontrol .repcontrol_edit:after {content: '(';}
 	.repcontrol .repcontrol_add:after {content: '&';}
@@ -36,7 +39,6 @@
 	.repcontrol .repcontrol_edit:after,
 	.repcontrol .repcontrol_add:after {
 		color   : #000;
-		left    : -94%;
 		position: relative;}
 
 		.sheet-npc .repcontrol .repcontrol_edit:after,
