add drain/fade, fix last few broken css spots

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -253,9 +253,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
 /******************************************************************************/
 /********************************* VARIABLES *********************************/
 /****************************************************************************/
-/********************************************************************************************************/
-/**************************************** START OF THE PC SHEET *******************************************/
-/********************************************************************************************************/
+/***************************************************************************************/
+/************************** START OF THE PC SHEET *************************************/
+/*************************************************************************************/
 .sheet-pc {
   background-color: #333;
   background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/Blackbackground.jpg");
@@ -269,7 +269,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
   .sheet-pc label > button[type='roll']:hover,
-  .sheet-pc .sheet-con-track button[type='action']:hover {
+  .sheet-pc .sheet-repeat-box button[type='roll']:hover,
+  .sheet-pc .sheet-con-track button[type='action']:hover,
+  .sheet-pc button[data-i18n="default"]:hover {
     color: #fff;
     text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d; }
   .sheet-pc hr {
@@ -925,7 +927,6 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   vertical-align: top;
   word-break: break-word; }
   .sheet-display-row:nth-of-type(1), .sheet-display-row:nth-of-type(1) button {
-    font-weight: bold;
     text-align: left; }
 
 /***** DISPLAY & SETTINGS *****/
@@ -1226,6 +1227,9 @@ input.sheet-skill-select[type='checkbox'] {
 .sheet-magic .sheet-htab:first-child {
   margin-left: -45px; }
 
+div.sheet-spell-box h3[data-i18n="modifier"] {
+  width: 12%; }
+
 .sheet-spell-box h3,
 .sheet-spell-box .sheet-display .sheet-display-row,
 .sheet-powers-box h3,
@@ -1260,9 +1264,6 @@ input.sheet-skill-select[type='checkbox'] {
 /***** MAGIC & POWERS SETTINGS *****/
 .sheet-powers-box .sheet-settings {
   width: 100%; }
-
-.sheet-spell-box input[type='number'] {
-  width: 19%; }
 
 /***** RITUAL SETTINGS *****/
 .sheet-magic-rituals input[type='text'] {
@@ -1306,24 +1307,25 @@ input.sheet-skill-select[type='checkbox'] {
   width: 99%; }
 
 /***** MATRIX *****/
+.sheet-matrix select.sheet-skill-select {
+  width: 26.5%; }
+.sheet-matrix input[name="attr_flag"] + span {
+  position: absolute; }
 .sheet-matrix .sheet-con-hex {
   margin-bottom: -10px;
   margin-right: 0px;
   margin-top: 5px;
   position: unset;
   width: 100%; }
-
-.sheet-con-hex input[type='radio']:first-child {
-  margin-right: -25%;
-  margin-top: 2%;
-  width: 25%; }
-
-.sheet-con-hex input[type='radio']:hover ~ h2 {
-  color: #fff;
-  text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d; }
-
-.sheet-con-hex h2 {
-  vertical-align: top; }
+  .sheet-matrix .sheet-con-hex input[type='radio']:first-child {
+    margin-right: -25%;
+    margin-top: 2%;
+    width: 25%; }
+  .sheet-matrix .sheet-con-hex input[type='radio']:hover ~ h2 {
+    color: #fff;
+    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d; }
+  .sheet-matrix .sheet-con-hex h2 {
+    vertical-align: top; }
 
 /***** CYBERDECK *****/
 .sheet-cyberdeck button {
@@ -1492,10 +1494,10 @@ input.sheet-skill-select[type='checkbox'] {
     width: 7%; }
   .sheet-form-box h3:nth-of-type(4) {
     width: 10%; }
+  .sheet-form-box h3[data-i18n="modifier"] {
+    width: 12%; }
 .sheet-form-box input[type='text'] {
   width: 50%; }
-.sheet-form-box input[type='number'] {
-  width: 8%; }
 .sheet-form-box .sheet-settings div {
   width: 100%; }
 .sheet-form-box select {
@@ -1865,9 +1867,9 @@ span.sheet-pictos3 {
 span.sheet-d6 {
   font-family: 'dicefontd6'; }
 
-/********************************************************************************************************/
-/**************************************** START OF THE NPC SHEET *******************************************/
-/********************************************************************************************************/
+/******************************************************************************************/
+/**************************** START OF THE NPC SHEET *************************************/
+/****************************************************************************************/
 .sheet-npc {
   background-color: #040404;
   border-radius: 3px;
@@ -2152,9 +2154,9 @@ span.sheet-d6 {
         .sheet-npc div.sheet-matrix-device div.repcontainer div.repitem button {
           margin-left: 5%; }
 
-/********************************************************************************************************/
-/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
-/********************************************************************************************************/
+/**************************************************************************/
+/***************** PC & NPC SHEET SHOW & HIDE SETTINGS *******************/
+/************************************************************************/
 /* DISPLAY SETTINGS
 	============================= */
 .sheet-skills-active,
