--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -123,10 +123,52 @@ include src/pug/_variables.pug
 	include src/gear.html
 
 	//- MAGIC TAB
-	include src/magic.html
+	.magic.pc-col
+		.pc-row.spell-box
+			.header.right-header
+				h1(data-i18n='magic') Magic
+				.right-tri
+			.header.right-header
+				.header.htab
+					.triangle
+					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="spells" checked)
+					h1(data-i18n="spells") Spells
+					.right-tri
+				.header.htab
+					.triangle
+					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="preps")
+					h1(data-i18n="prep") Prep...
+					.right-tri
+				.header.htab
+					.triangle
+					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="rituals")
+					h1(data-i18n="rituals") Rituals
+					.right-tri
+			.border-box.repeat-box
+				.pc-box.medium-box
+					+fadeDrainSection('drain')
+					input.magic-toggle(name="attr_magic_toggle" type="hidden" value="spells")
+					include src/magic.html
+		.pc-row
+			include src/powers.html
 
 	//- MATRIX TAB
-	include src/matrix.html
+	.matrix.pc-col
+		.pc-row
+			include src/matrix.html
+		.pc-row
+			.header.right-header
+				h1(data-i18n='complexform') Complex Forms
+				.right-tri
+			.border-box.repeat-box.form-box
+				.pc-box.medium-box
+					+fadeDrainSection('fade')
+					.row-long
+						h3(data-i18n="complexform") Complex Form
+						h3(data-i18n="target") Target
+						h3(data-i18n="duration") Duration
+						h3(data-i18n="fade") Fade
+					include src/complexforms.html
 
 	//- SOCIAL TAB
 	include src/social.html
