--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -121,9 +121,9 @@ $characterTypes: 'npc', 'pc';
 $specialCharacters: 'magic', 'resonance';
 $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
-/********************************************************************************************************/
-/**************************************** START OF THE PC SHEET *******************************************/
-/********************************************************************************************************/
+/***************************************************************************************/
+/************************** START OF THE PC SHEET *************************************/
+/*************************************************************************************/
 	.sheet-pc {
 		background-color: #333;
 		background-image: url('https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/Blackbackground.jpg');
@@ -136,7 +136,9 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		button > h2:hover,
 		button > span:hover,
 		label > button[type='roll']:hover,
-		.sheet-con-track button[type='action']:hover {
+		.sheet-repeat-box button[type='roll']:hover,
+		.sheet-con-track button[type='action']:hover,
+		button[data-i18n="default"]:hover {
 			color      : #fff;
 			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;
 		}
@@ -291,14 +293,14 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 	}
 	@import 'src/scss/_pc'; 
 
-/********************************************************************************************************/
-/**************************************** START OF THE NPC SHEET *******************************************/
-/********************************************************************************************************/
+/******************************************************************************************/
+/**************************** START OF THE NPC SHEET *************************************/
+/****************************************************************************************/
 	@import 'src/scss/_npc'; 
 
-/********************************************************************************************************/
-/********************************* PC & NPC SHEET SHOW & HIDE SETTINGS ***********************************/
-/********************************************************************************************************/
+/**************************************************************************/
+/***************** PC & NPC SHEET SHOW & HIDE SETTINGS *******************/
+/************************************************************************/
 
 /* DISPLAY SETTINGS
 	============================= */
