--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -234,7 +234,7 @@
 							input(name='attr_rating' min='0' placeholder='0' title='@{repeating_'+key+'_${x}_rating}' type='number')
 						label(data-i18n-title='ratingmodifier' title='Rating Modifier')
 							input(name='attr_rating_modifier' min='0' placeholder='0' title='@{repeating_'+key+'_${x}_rating_modifier}' type='number' )
-						select.attribute-select(name='attr_attribute' title='@{repeating_'+key+'_${x}_attribute')
+						select.attribute-select(name='attr_attribute' title='@{repeating_'+key+'_${x}_attribute}')
 							+attributeSelect(val[1])
 						select.limit-select(name='attr_limit' title='@{repeating_'+key+'_${x}_limit}' value='physical_limit')
 							+limitSelect(val[2])
