--- a/Shadowrun5thEdition/src/pug/_variables.pug
+++ b/Shadowrun5thEdition/src/pug/_variables.pug
@@ -30,3 +30,5 @@
 //- DIE ROLL VARIABLES
 - const rollBeginging = '@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}';
 - const rollEnding = '+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}';
+- const soakRollBeginging = '@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}';
+- const soakRollEnding = '+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}';
