--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -687,7 +687,6 @@
 
 		&:nth-of-type(1),
 		&:nth-of-type(1) button {
-			font-weight: bold;
 			text-align : left;
 		}
 	}
@@ -1018,6 +1017,10 @@
 		.sheet-magic .sheet-htab {margin-right: -45px;}
 		.sheet-magic .sheet-htab:first-child {margin-left: -45px;}
 
+		div.sheet-spell-box {
+			h3[data-i18n="modifier"] { width: 12%; }
+		}
+
 		.sheet-spell-box h3,
 		.sheet-spell-box .sheet-display .sheet-display-row,
 		.sheet-powers-box h3,
@@ -1050,7 +1053,6 @@
 
 		/***** MAGIC & POWERS SETTINGS *****/
 			.sheet-powers-box .sheet-settings {width: 100%;}
-			.sheet-spell-box input[type='number'] {width: 19%;}
 
 			/***** RITUAL SETTINGS *****/
 				.sheet-magic-rituals input[type='text'] {width: 95%;}
@@ -1079,23 +1081,32 @@
 				.sheet-magic-rituals .sheet-display .sheet-display-row {width: 99%;}
 
 	/***** MATRIX *****/
-		.sheet-matrix .sheet-con-hex {
-			margin-bottom: -10px;
-			margin-right : 0px;
-			margin-top   : 5px;
-			position     : unset;
-			width        : 100%;}
+		.sheet-matrix {
+			select.sheet-skill-select { width: 26.5%; }
 
-			.sheet-con-hex input[type='radio']:first-child {
-				margin-right: -25%;
-				margin-top  : 2%;
-				width       : 25%;}
+			input[name="attr_flag"] + span { position: absolute; }
 
-			.sheet-con-hex input[type='radio']:hover ~ h2 {
-				color      : #fff;
-				text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;}
+			.sheet-con-hex {
+				margin-bottom: -10px;
+				margin-right : 0px;
+				margin-top   : 5px;
+				position     : unset;
+				width        : 100%;
 
-			.sheet-con-hex h2 {vertical-align: top;}
+				input[type='radio']:first-child {
+					margin-right: -25%;
+					margin-top  : 2%;
+					width       : 25%;
+				}
+
+				input[type='radio']:hover ~ h2 {
+					color      : #fff;
+					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;
+				}
+
+				h2 {vertical-align: top;}
+			}
+		}
 
 		/***** CYBERDECK *****/
 			.sheet-cyberdeck button {
@@ -1277,10 +1288,11 @@
 					margin-right: 0px;
 					width       : 7%;}
 				&:nth-of-type(4) {width: 10%;}
+
+				&[data-i18n="modifier"] { width: 12%; }
 			}
 
 			input[type='text'] {width: 50%;}
-			input[type='number'] {width: 8%;}
 			.sheet-settings div {width: 100%;}
 			select {
 				margin-right: 1%;
@@ -1355,7 +1367,8 @@
 
 	/***** Options Section *****/
 		.sheet-options .sheet-pc-box {
-			min-height: 800px;}
+			min-height: 800px;
+		}
 
 		.sheet-op-col {
 			display       : inline-block;
