--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -11,6 +11,10 @@ mixin skillButton(specialization)
     button(name=rollName type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
         span(name=display)
 
+//- SOAK ROLL
+mixin soakRoll(header, base, rollForumla)
+    button(data-i18n=header name=header type='roll' value!=soakRollBeginging+'{{header=^{'+header+'}}}{{base='+base+'}}{{dice=[[(('+rollForumla+')'+soakRollEnding) #{name}
+
 //- SPRITE BUTTONS
 mixin spriteButton(header, display)
     button(name=header type='roll' value!=rollBeginging+'{{header=@{'+header+'}}}{{base=^{level}}}{{dice=[[((@{level}+@{level})'+rollEnding)
@@ -70,3 +74,16 @@ mixin conditionMonitor(conditionTypes)
         span(name='attr_'+val title='@{'+val+'_modifier}')
         if val === 'physical'
             span /
+
+//- PC FADE & DRAIN ROLLS
+mixin fadeDrainSection(fadeOrDrain)
+    - const defaultFirstAttribute = fadeOrDrain === 'fade' ? 'Resonance' : 'Logic';
+    +soakRoll(fadeOrDrain, '^{base}', '@{'+fadeOrDrain+'_attribute_1}+@{'+fadeOrDrain+'_attribute_2}+@{'+fadeOrDrain+'_modifier}')
+    select.attribute-select(name='attr_'+fadeOrDrain+'_attribute_1' title='@{'+fadeOrDrain+'_attribute_1}')
+        +attributeSelect(defaultFirstAttribute)
+    span +
+    select.attribute-select(name='attr_'+fadeOrDrain+'_attribute_2' title='@{'+fadeOrDrain+'_attribute_2}')
+        +attributeSelect('Willpower')
+    h3(data-i18n='modifier') modifier
+    label(data-i18n-title='modifier' title='modifier')
+        input(name='attr_'+fadeOrDrain+'_modifier' title='@{'+fadeOrDrain+'_modifier}' type="number" value=0)
