--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -342,6 +342,11 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     padding: 0px; }
   .sheet-pc div.sheet-core-info h2 {
     margin-right: 1%; }
+  .sheet-pc div.sheet-core-info input[type='text'], .sheet-pc div.sheet-core-info input[type='number'] {
+    background-color: transparent;
+    border: none; }
+    .sheet-pc div.sheet-core-info input[type='text']:placeholder-shown, .sheet-pc div.sheet-core-info input[type='number']:placeholder-shown {
+      background-color: rgba(28, 28, 28, 0.14902); }
   .sheet-pc input.sheet-display-flag {
     position: absolute; }
   .sheet-pc div.repitem input[type='number'] {
@@ -1192,7 +1197,7 @@ input.sheet-skill-select[type='checkbox'] {
   margin-right: 2%; }
 
 .sheet-item-box .sheet-display-row:nth-of-type(1) {
-  width: 85%; }
+  width: 82%; }
 
 /***** AUGMENTATIONS (AUGS) *****/
 .sheet-aug-box h3:nth-of-type(1) {
@@ -1668,17 +1673,17 @@ div.sheet-spell-box h3[data-i18n="modifier"] {
 .sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon,
 .sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon,
 .sheet-edge-zero[value='0'] ~ .sheet-hexagon {
-  background-color: #610b0d; }
+  background-color: #9a9a9a; }
 
 .sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon:before,
 .sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon:before,
 .sheet-edge-zero[value='0'] ~ .sheet-hexagon:before {
-  border-bottom-color: #610b0d; }
+  border-bottom-color: #9a9a9a; }
 
 .sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon:after,
 .sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon:after,
 .sheet-edge-zero[value='0'] ~ .sheet-hexagon:after {
-  border-top-color: #610b0d; }
+  border-top-color: #9a9a9a; }
 
 .sheet-edg-hex input[type='checkbox']:checked + .sheet-hexagon,
 .sheet-con-hex input[type='radio'] + .sheet-hexagon,
