--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -3,6 +3,8 @@
 	$red: #610b0d;
 	$purple: #7a2593;
 	$lightgray: #9a9a9a;
+	$graytrans: rgba(28, 28, 28, 0.14902);
+	$grayshadow: #7c7c7c;
 	$blacker: #040404;
 	//- GRAY IN ROLL TEMPLATE
 	$blackish: #1c1c1c;
@@ -140,7 +142,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		.sheet-con-track button[type='action']:hover,
 		button[data-i18n="default"]:hover {
 			color      : #fff;
-			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;
+			text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
 		}
 
 		hr { margin: 7px 0px -2px 0px; }
@@ -229,6 +231,15 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 		div.sheet-core-info {
 			h2{ margin-right: 1%; }
+
+			input[type='text'], input[type='number'] { 
+				background-color: transparent; 
+				border: none;
+
+				&:placeholder-shown {
+					background-color: $graytrans;
+				}
+			}
 		}
 
 		input.sheet-display-flag { position: absolute; }
@@ -283,11 +294,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 			select.sheet-attribute-select {
 				option:nth-of-type(1n+9) { color: #7a2593;	}
-				option:nth-of-type(1n+5) { color: #610b0d; }
+				option:nth-of-type(1n+5) { color: $red; }
 			}
 
 			select.sheet-limit-select  {
-				option:nth-of-type(1n+5) { color: #610b0d; }
+				option:nth-of-type(1n+5) { color: $red; }
 			}
 		}
 	}
