--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -179,7 +179,7 @@
 	}
 
 	%highlight-button {
-		background-color: #610b0d;
+		background-color: $red;
 		box-shadow      : inset 0px 0px 3px 1px #e31715; 
 		color           : #fff;
 	}
