--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -76,7 +76,10 @@
 				.rows(class=val[2])
 					+initiativeRoll(key, val[0], val[1])
 					label.settings(data-i18n-title='modifier' title='modifier')
-						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
+						if key === 'Initiative'
+							input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
+						else
+							input(name='attr_'+val[0]+'_mod_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
 					span.settings +
 					label.settings(data-i18n-title='modifierdice' title='Modifier Dice')
 						input(min='0' max='4' name='attr_'+val[0]+'_dice_modifier' placeholder='0' title='@{'+val[0]+'_dice_modifier}' type='number' value='0')
@@ -153,11 +156,9 @@
 					+rollButton(val[1], 'base', '@{soak}+@{'+val[0]+'_modifier}')
 					label.settings(data-i18n-title=val[1] title=val[1])
 						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
-					span.settings.tiny-span() =
 					if (key === 'Defense' || key === 'Soak')
+						span.settings.tiny-span() =
 						span(name='attr_'+val[0])
-					else
-						span(name='attr_'+val[0]+'_protection')
 
 		///- OPTIONS
 		.column
