--- a/Shadowrun5thEdition/src/scss/_global.scss
+++ b/Shadowrun5thEdition/src/scss/_global.scss
@@ -64,7 +64,7 @@
 			}
 
 			&:placeholder-shown {
-				background-color: hsla(0, 0%, 11%, 0.14901960784313725);
+				background-color: $graytrans;
 				color: white;
 			}
 		}
@@ -98,7 +98,7 @@
 
 	.charsheet { width: 850px; }
 
-	.sheet-red {color: #610b0d;  }
+	.sheet-red {color: $red;  }
 	.sheet-text-align-center {text-align: center;}
 
 	input[name='attr_stats_toggle'],
