--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -6,7 +6,7 @@
 		width         : calc(50% - 5px);
 
 		h1 {
-			background-color: #610b0d;
+			background-color: $red;
 			color           : #fff;
 			font-size       : 1em;
 			letter-spacing  : 2px;
@@ -47,12 +47,12 @@
 
 /***** DECORATIVE BOX THAT ADDS THE RED OUTLINE ON PC SHEET *****/			
 	.sheet-border-box {
-		background-image: -moz-linear-gradient(#610b0d, transparent), -moz-linear-gradient(#610b0d, transparent);
-		background-image: -o-linear-gradient(#610b0d, transparent), -o-linear-gradient(#610b0d, transparent);
-		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#610b0d), to(transparent));
-		background-image: -webkit-linear-gradient(#610b0d, transparent);
-		background-image: linear-gradient(#610b0d, transparent), linear-gradient(#610b0d, transparent);
-		border-top      : 2px solid #610b0d;
+		background-image: -moz-linear-gradient($red, transparent), -moz-linear-gradient($red, transparent);
+		background-image: -o-linear-gradient($red, transparent), -o-linear-gradient($red, transparent);
+		background-image: -webkit-gradient(linear, 0 0, 0 100%, from($red), to(transparent));
+		background-image: -webkit-linear-gradient($red, transparent);
+		background-image: linear-gradient($red, transparent), linear-gradient($red, transparent);
+		border-top      : 2px solid $red;
 		clear           : both;
 		border-top-right-radius: 10px;
 		border-top-left-radius : 0px;
@@ -83,8 +83,8 @@
 	.sheet-right-tri {
 		border-top: 20px solid transparent;}
 
-	.sheet-triangle {border-right: 30px solid #610b0d;}
-	.sheet-right-tri {border-left: 30px solid #610b0d;}
+	.sheet-triangle {border-right: 30px solid $red;}
+	.sheet-right-tri {border-left: 30px solid $red;}
 
 	.sheet-right-header {float: left;}
 
@@ -453,10 +453,10 @@
 			}
 
 			span {
-				background-color: #9a9a9a;
+				background-color: $lightgray;
 				border-radius   : 0px;
-				border          : 2px solid #610b0d;
-				box-shadow      : inset 0px 0px 3px 1px #7c7c7c;
+				border          : 2px solid $red;
+				box-shadow      : inset 0px 0px 3px 1px $grayshadow;
 				display         : inline-block;
 				margin-bottom   : -25px;
 				margin-right    : -7px;
@@ -991,7 +991,7 @@
 				margin-right: 2%;}	
 
 			.sheet-item-box .sheet-display-row:nth-of-type(1) {
-				width: 85%;}
+				width: 82%;}
 
 		/***** AUGMENTATIONS (AUGS) *****/
 			.sheet-aug-box h3:nth-of-type(1) {margin-right: 55%;}
@@ -1101,7 +1101,7 @@
 
 				input[type='radio']:hover ~ h2 {
 					color      : #fff;
-					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d;
+					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
 				}
 
 				h2 {vertical-align: top;}
@@ -1445,7 +1445,8 @@
 			position: relative;
 			background-color: #222;
 			height: 11.55px;
-			width: 20px; }
+			width: 20px; 
+		}
 
 		.sheet-hexagon:before,
 		.sheet-hexagon:after {
@@ -1467,17 +1468,17 @@
 		.sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon,
 		.sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon,
 		.sheet-edge-zero[value='0'] ~ .sheet-hexagon {
-			background-color: #610b0d;}
+			background-color: $lightgray;}
 
 		.sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon:before,
 		.sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon:before,
 		.sheet-edge-zero[value='0'] ~ .sheet-hexagon:before  {
-			border-bottom-color: #610b0d;}
+			border-bottom-color: $lightgray;}
 
 		.sheet-edg-hex input[type='checkbox']:checked ~ .sheet-hexagon:after,
 		.sheet-con-hex input[type='radio']:checked ~ .sheet-hexagon:after,
 		.sheet-edge-zero[value='0'] ~ .sheet-hexagon:after  {
-			border-top-color: #610b0d;}
+			border-top-color: $lightgray;}
 
 		.sheet-edg-hex input[type='checkbox']:checked + .sheet-hexagon,
 		.sheet-con-hex input[type='radio'] + .sheet-hexagon,
