start making prepartions section

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1342,19 +1342,16 @@ div.sheet-spell-box h3[data-i18n="modifier"] {
 
 .sheet-cyberdeck h3 {
   line-height: 20px; }
-
-.sheet-cyberdeck h3:nth-of-type(2) {
-  margin-left: 5%; }
-
-.sheet-cyberdeck h3:nth-of-type(3) {
-  margin-left: 1%; }
-
-.sheet-cyberdeck h3:nth-of-type(4) {
-  margin-left: 0%;
-  margin-right: 15%; }
-
-.sheet-cyberdeck .sheet-row-long h3:first-child {
-  margin-left: 15%; }
+  .sheet-cyberdeck h3[data-i18n="total"] {
+    margin-left: 15%; }
+  .sheet-cyberdeck h3[data-i18n="temp"] {
+    margin-left: 5%; }
+  .sheet-cyberdeck h3[data-i18n="modifier"] {
+    margin-left: 2%;
+    margin-right: 2%; }
+  .sheet-cyberdeck h3[data-i18n="base"] {
+    margin-left: 0%;
+    margin-right: 15%; }
 
 .sheet-cyberdeck input[type='number'] {
   border: none;
