--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -131,24 +131,62 @@ include src/pug/_variables.pug
 			.header.right-header
 				.header.htab
 					.triangle
-					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="spells" checked)
-					h1(data-i18n="spells") Spells
+					input.magic-toggle(name='attr_magic_toggle' title='@{magic_toggle}' type='radio' value='spells' checked)
+					h1(data-i18n='spells') Spells
 					.right-tri
 				.header.htab
 					.triangle
-					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="preps")
-					h1(data-i18n="prep") Prep...
+					input.magic-toggle(name='attr_magic_toggle' title='@{magic_toggle}' type='radio' value='preps')
+					h1(data-i18n='prep') Prep...
 					.right-tri
 				.header.htab
 					.triangle
-					input.magic-toggle(name="attr_magic_toggle" title="@{magic_toggle}" type="radio" value="rituals")
-					h1(data-i18n="rituals") Rituals
+					input.magic-toggle(name='attr_magic_toggle' title='@{magic_toggle}' type='radio' value='rituals')
+					h1(data-i18n='rituals') Rituals
 					.right-tri
 			.border-box.repeat-box
 				.pc-box.medium-box
 					+fadeDrainSection('drain')
-					input.magic-toggle(name="attr_magic_toggle" type="hidden" value="spells")
+					.row-long
+						each val in ['spells', 'type', 'range', 'duration', 'drain']
+							h3(data-i18n=val) #{val}
+
+					input.magic-toggle(name='attr_magic_toggle' type='hidden' value='spells')
 					include src/magic.html
+
+					.magic-preps
+						.rows.repeating
+							include src/preps.html
+
+						.rows.repeating
+							h2(data-i18n='preperation') preperation
+							fieldset(class='repeating_preperations')
+								input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+								span.pictos x
+								button(name='preperation' type='roll' value='@{gm_toggle} &{template:rolls}{{header=@{name}}}{{desc=@{note}}}')
+									span(name='attr_name')
+								span(name='attr_note')
+								.settings
+									h3(data-i18n='name') name
+									label(data-i18n-title='name' title='name')
+										input(name='attr_name' placeholder='Name' title='@{repeating_preperations_${x}_name}' type='text' value='')
+									h3(data-i18n='force') force
+									label(data-i18n-title='force' title='force')
+										input(name='attr_force' placeholder='1' title='@{repeating_preperations_${x}_force}' type='number' value='')
+									h3(data-i18n='potency') potency
+									label(data-i18n-title='potency' title='potency')
+										input(name='attr_potency' placeholder='1' title='@{repeating_preperations_${x}_potency}' type='number' value='')
+									h3(data-i18n='trigger') trigger
+									select(name='attr_trigger' title='@{repeating_preperations_${x}_trigger}')
+										option(data-i18n='command' value='command') command
+										option(data-i18n='contact' value='contact') contact
+										option(data-i18n='time' value='time') time
+										option(data-i18n='special' value='special') special
+									h3(data-i18n='notes') notes
+									label(data-i18n-title='notes' title='notes')
+										textarea(name='attr_note' placeholder='Notes' title='@{repeating_preperations_${x}_note}' type='text' value='')
+
+
 		.pc-row
 			include src/powers.html
 
@@ -164,10 +202,8 @@ include src/pug/_variables.pug
 				.pc-box.medium-box
 					+fadeDrainSection('fade')
 					.row-long
-						h3(data-i18n="complexform") Complex Form
-						h3(data-i18n="target") Target
-						h3(data-i18n="duration") Duration
-						h3(data-i18n="fade") Fade
+						each val, key in {'Complex Form': 'complexform','Target':'target', 'Duration': 'duration', 'Fade': 'fade'}
+							h3(data-i18n=val) #{key}
 					include src/complexforms.html
 
 	//- SOCIAL TAB
